Refactor the test to make it easier to understand which variations fail