@@ -21,6 +21,20 @@ import java.util.List;
 import org.mybatis.generator.config.MergeConstants;
 
 public class ShouldPreserveCustomMethodsWithAllSupportedJavadocTags extends JavaMergeTestCase {
+    public ShouldPreserveCustomMethodsWithAllSupportedJavadocTags() {
+        addMergeConfiguration("Eclipse", new MergeConfiguration.Builder()
+                .withImportSortType(MergeConfiguration.ImportSortType.ECLIPSE)
+                .build());
+
+        addMergeConfiguration("LexicalPreserving", new MergeConfiguration.Builder()
+                .isLexicalPreserving(true)
+                .build());
+
+        addMergeConfiguration("MergeIntoOld", new MergeConfiguration.Builder()
+                .withMergeStrategy(MergeConfiguration.MergeStrategy.MERGE_INTO_EXISTING)
+                .build());
+    }
+
     @Override
     public String existingContent(String parameter) {
         return String.format("""
@@ -131,25 +145,6 @@ public class ShouldPreserveCustomMethodsWithAllSupportedJavadocTags extends Java
 
     @Override
     public List<String> parameterVariants() {
-        return Arrays.stream(MergeConstants.getOldElementTags()).toList();
-    }
-
-    @Override
-    public List<MergeConfigurationAndId> mergeConfigurations() {
-        MergeConfiguration eclipse = new MergeConfiguration.Builder()
-                .withImportSortType(MergeConfiguration.ImportSortType.ECLIPSE)
-                .build();
-
-        MergeConfiguration lexicalPreserving = new MergeConfiguration.Builder()
-                .isLexicalPreserving(true)
-                .build();
-
-        MergeConfiguration mergeIntoOld = new MergeConfiguration.Builder()
-                .withMergeStrategy(MergeConfiguration.MergeStrategy.MERGE_INTO_EXISTING)
-                .build();
-
-        return List.of(new MergeConfigurationAndId("Eclipse", eclipse),
-                new MergeConfigurationAndId("LexicalPreserving", lexicalPreserving),
-                new MergeConfigurationAndId("MergeIntoOld", mergeIntoOld));
+        return Arrays.asList(MergeConstants.getOldElementTags());
     }
 }
